--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=scraper
+spring.datasource.url=jdbc:mysql://evertonfraga.co.uk:3306/u739388469_scraper
+spring.datasource.username=u739388469_adm
+spring.datasource.password=38naoehfebredenovO
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
