--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=u739388469_adm
 spring.datasource.password=38naoehfebredenovO
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+//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
