Completed coding and integrated REST API requests into Java program.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=38naoehfebredenovO
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
+//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
